# parallax-jwst

./: .gitignore  CHANGES.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  run_gui.bat  run_gui.pyw
examples/: example_gui.py  explore_m92.py  explore_orion_bar.py
parallax/: __init__.py  _db.py  acquisition.py  archive.py  catalog.py  chart.py  config.py  exceptions.py  logger.py  monitor.py  survey.py  types.py  view.py
parallax/gui/: __init__.py  app.py  log_handler.py  platform.py
parallax/gui/panels/: __init__.py  detail.py  inspect.py  reports.py  settings.py  sky.py
parallax/gui/widgets/: __init__.py  log_bar.py  toolbar.py
tests/: conftest.py  test_api.py  test_archive.py  test_catalog.py  test_chart.py  test_gui.py  test_monitor.py  test_sky_view.py  test_survey.py  test_view.py
